# gitcodes-mcp

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  SEARCH_REMOVAL_SUMMARY.md  Taskfile.yaml  devlog.md  flake.nix  githuc_codes_run.md  gix_fetch_try.md  refactoring_log1.md  refactoring_log2.md  refactoring_log3.md  refactoring_log4.md  refactoring_log5.md  spec.md
benches/: search_benchmarks.rs
docs/: LANCEDB_INTEGRATION.md  UNIFIED_SEARCH_API.md  glob-patterns.md
docs/blueprint/: 1.md  2.md  user_model_design.md
docs/context/: about-mcp.md  mcp-sdk-rust.md
docs/devlog/: 1.md  2.md  3.md  4.md
examples/: client.rs  test_linear_reranking.rs  unified_search.rs
src/: ids.rs  lib.rs  types.rs
src/git/: mod.rs
src/gitcodes/: mod.rs  tools.rs
src/gitcodes/gits/: mod.rs
src/gitcodes/gits/repository_manager/: mod.rs
src/gitcodes/gits/repository_manager/providers/: git_remote_repository.rs
src/gitcodes/local_repository/: mod.rs  reference.rs  search_result.rs  tree.rs
src/gitcodes/repository_manager/: instance.rs  mod.rs  repository_location.rs
src/gitcodes/repository_manager/providers/: git_remote_repository.rs  mod.rs  models.rs
src/gitcodes/repository_manager/providers/github/: mod.rs  octocrab_client.rs
src/services/: mod.rs  sync.rs
src/storage/: database.rs  enhanced_search.rs  lancedb_store.rs  mod.rs  models.rs  paths.rs  search_store.rs  search_store_full.rs  search_tests.rs  user_model_example.rs
src/tools/: error.rs  mod.rs  responses.rs
src/tools/gitcodes/: git_repository.rs  mod.rs  tools.rs  wrapper.rs
src/tools/gitcodes/git_service/: code_search.rs  git_repository.rs  github_api.rs  local_repository.rs  mod.rs  params.rs
src/tools/gitcodes/github/: github_client.rs  mod.rs
src/tools/gitcodes/github_service/: code_search.rs  git_repository.rs  github_api.rs  mod.rs  params.rs
src/tools/gitcodes/gits/: code_search.rs  local_repository.rs  mod.rs  repository_manager.rs
src/tools/gitcodes/gits/local_repository/: mod.rs
src/tools/gitcodes/gits/remote_repository/: mod.rs  remote_repository_client.rs  remote_repository_service.rs
src/tools/gitcodes/gits/repository_manager/: mod.rs
src/tools/gitcodes/gits/repository_manager/provider/: mod.rs
src/tools/gitcodes/gits/repository_manager/provider/github/: github_client.rs
src/tools/gitcodes/gits/repository_manager/providers/: git_remote_repository.rs  mod.rs
src/tools/gitcodes/gits/repository_manager/providers/github/: mod.rs
src/transport/: sse_server.rs  stdio.rs
tests/: README.md  compact_response_test.rs  database_tests.rs  fetch_remote_test.rs  github_api_test.rs  github_url_test.rs  grep_context_test.rs  ids_tests.rs  integration_test.rs  lancedb_query_tests.rs  lancedb_tests.rs  local_repository_security_test.rs  local_repository_test.rs  participant_core_test.rs  participant_integration_test.rs  participant_search_test.rs  participant_tests.rs  project_tests.rs  repository_manager_test.rs  repository_refs_test.rs  search_integration_tests.rs  search_issues_test.rs  search_repositories_test.rs  search_store_tests.rs  services_test.rs  services_test.rs.orig  services_test.rs.rej  sync_service_tests.rs  tree_test.rs  types_tests.rs  unified_search_tests.rs
