[package]
name = "gitcodes-mcp"
version = "0.1.0"
edition = "2021"
description = "Rust Documentation MCP Server for LLM crate assistance"
authors = ["Claude <noreply@anthropic.com>"]
license = "MIT"
repository = "https://github.com/d6e/gitcodes-mcp"


[dependencies]
rmcp = { version = "0.1", features = [
    "server",
    "transport-sse-server",
    "transport-io",
] }


# MCP dependencies from GitHub
# HTTP and networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
urlencoding = "2.1"

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
html2md = "0.2.14"
lumin = "0.1.5"
strum = { version = "0.25", features = ["derive"] }
gix = "0.72.1"
gitoxide-core = "0.47.1"
thiserror = "2.0"

[dev-dependencies]
# Testing utilities
mockito = "1.2"

# Main binary with subcommands
[[bin]]
name = "gitcodes-mcp"
path = "src/bin/gitcodes.rs"
