[package]
name = "gitcodes-mcp"
version = "0.1.0"
edition = "2024"
description = "Rust Documentation MCP Server for LLM crate assistance"
authors = ["me+github@tacogips.me"]
license = "MIT"
repository = "https://github.com/tacogips/gitcodes-mcp"


[dependencies]
rmcp = { version = "0.1", features = [
    "server",
    "transport-sse-server",
    "transport-io",
] }


# MCP dependencies from GitHub
# HTTP and networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
urlencoding = "2.1"

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

# GitHub API client
octocrab = "0.44"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
html2md = "0.2.14"
lumin = "0.1.16"
strum = { version = "0.25", features = ["derive"] }
gix = { version = "0.72.1", features = ["blocking-http-transport-reqwest"] }
gitoxide-core = { version = "0.47.1", features = ["blocking-client"] }
uuid = { version = "1.4", features = ["v4"] }
once_cell = "1.18"

[dev-dependencies]
# Testing utilities
mockito = "1.2"
tempfile = "3.8"
tokio-test = "0.4"

[features]
# Features used for testing
this_test_is_disabled = []

# Main binary with subcommands
[[bin]]
name = "gitcodes-mcp"
path = "src/bin/gitcodes.rs"

# CLI binary for terminal use
[[bin]]
name = "gitcodes-cli"
path = "src/bin/gitcodes_cli.rs"
