[package]
name = "gitdb"
version = "0.1.0"
edition = "2024"
description = "Rust Documentation MCP Server for LLM crate assistance"
authors = ["me+github@tacogips.me"]
license = "MIT"
repository = "https://github.com/tacogips/gitdb"


[dependencies]
rmcp = { version = "0.1", features = [
    "server",
    "transport-sse-server",
    "transport-io",
] }


# MCP dependencies from GitHub
# HTTP and networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
urlencoding = "2.1"

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
schemars = "0.8"

# GitHub API client
octocrab = "0.44"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
lumin = "0.1.16"
strum = { version = "0.25", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
once_cell = "1.18"
futures = "0.3"

# Database and storage
native_db = "0.8.1"
native_model = "0.4.20"
tantivy = "0.22"
lancedb = "0.19"
arrow = "54"
arrow-array = "54"
arrow-schema = "54"

# Platform directories
dirs = "5.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.10"

[dev-dependencies]
# Testing utilities
mockito = "1.2"
tempfile = "3.8"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
# Features used for testing
this_test_is_disabled = []

# Main binary with subcommands
[[bin]]
name = "gitdb-mcp"
path = "src/bin/gitdb_mcp.rs"

# CLI binary for terminal use
[[bin]]
name = "gitdb-cli"
path = "src/bin/gitdb_cli.rs"

[[bench]]
name = "search_benchmarks"
harness = false
